prevent image from cutting off

--- a/common/common.scss
+++ b/common/common.scss
@@ -2,7 +2,6 @@ div[class^="hero"] {
   padding: calc(4rem + 80px) 0 10px 0;
   width: 100%;
   position: relative;
-  overflow: hidden;
 
   h1 {
     margin: 0 0 4px 0;
